--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
 <head>
 <title>Hello World!</title>
-<link rel="stylesheet" href="bluestyle.css">
+<link rel="stylesheet" href="bluestyle.css">
 </head>
 <body>
 
 <h1>Hello world!</h1>
-<p>This is the first file in my new Git Repo.</p>
+<div><img src="images/my_dog.jpg" alt=“My lovely Pet"style="width:100%;max-width:960px"></div>
+<p>This is My Firts App.</p>
 <p>A new line in our file!</p>
 
 </body>
