Edit title of the web

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<h1>Hello world!</h1>
+<h1>THIS IS MY FAVORITE PETS</h1>
 <div><img src="images/my_dog.jpg" alt=“My lovely Pet"style="width:100%;max-width:960px"></div>
 <p>This is My Firts App.</p>
 <p>A new line in our file!</p>
