--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <body>
 
 <h1>THIS IS MY FAVORITE PETS</h1>
-<div><img src="images/my_dog.jpg" alt=“My lovely Pet"style="width:100%;max-width:960px"></div>
+<div><img src="images/my_dog.jpg" alt="My lovely Pet" style="width:100%;max-width:960px"></div>
+<div><img src="images/my_dog_1.jpg" alt="My lovely Pet" style="width:100%;max-width:960px"></div>
 <p>This is My Firts App.</p>
 <p>A new line in our file!</p>
 
