Updated index.html. Add new Line

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <div><img src="images/my_dog.jpg" alt="My lovely Pet" style="width:100%;max-width:960px"></div>
 <div><img src="images/my_dog_1.jpg" alt="My lovely Pet" style="width:100%;max-width:960px"></div>
 <p>Welcome to my pets site.</p>
+<h2>Update new line to Index.html</h2>
 
 </body>
 </html>
